# bankingsystem

./: .amateras  .cproject  .gitignore  .project  CMakeLists.txt  requirements.txt
src/: account.h  admin.cpp  admin.h  customer.cpp  customer.h  database.cpp  database.h  employee.cpp  employee.h  main.cpp  person.h  session.cpp  session.h  userinterface.cpp  userinterface.h
src/tests/: session_test.cpp  session_test.h
